# newscli

./: .env  Cargo.toml
newslib/: Cargo.toml
newslib/src/: lib.rs
src/: main.rs  theme.rs
