[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
crossterm = "0.20.0"
dotenv = "0.15.0"
newslib = { path = "./newslib", features = ["async"] }
termimad = "0.14.2"
tokio = { version = "1.22.0", features = ["full"] }
