[package]
name = "newslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
thiserror = "1.0.37"
url = "2.3.1"
reqwest = { version = "0.11.13", features = ["json"], optional = true }

[features]
async = ["reqwest"]
